# CASE-pydantic

./: README.md  example.jsonld  pyproject.toml
caselib/: __init__.py
caselib/case/: investigation.py
caselib/scripts/: test_case.py
caselib/uco/: __init__.py  action.py  analysis.py  identity.py  location.py  marking.py  victim.py
src/caselib/: __init__.py
src/caselib/case/: __init__.py
src/caselib/scripts/: example.py  generate_case.py
src/caselib/uco/: co.py  configuration.py  core.py  observable.py  pattern.py  role.py  tool.py  types.py
